# ididathing

./: README.md  setup.cfg
src/ididathing/: go_handler.py  javascript_handler.py  python_handler.py
tests/: ididathing_test.py
