[metadata]
name = ididathing
version = 0.1.0
description = Find the dependencies actually installed the hard way! Sets up a temporary virtual environment and returns the actual list of dependencies fetched
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/ididathing
author = Noble Saji Mathews
author_email = elbonleon@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
# install_requires =
#     django>=3.2
#     zxpy>=1.4.4
python_requires = >=3.7
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    ididathing=ididathing:cli

[options.extras_require]
dev =
    black
    mypy
    pytest
    pytest-cov
    tox

[options.package_data]
sample_package =
	py.typed

[tool:pytest]
addopts = --cov --cov-report=term-missing
